--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,7 +11,7 @@
     </head>
     
     <body>
-        <h1 style="margin-top: 40px"></h1>
+        <!--h1 style="margin-top: 40px"></h1>
 
         <div id="centerLayer">
             <h1 style="margin-left: 31%" id="centerLayer">Авторизация</h1>
@@ -35,17 +35,27 @@
                 <input type="password" style="margin-top: 1%" placeholder="Подтвердите пароль" aria-label="Подтвердите пароль">
             </div>
             <button type="submit" style="margin-top: 20px; margin-left: 39%; height:25px; width:20%">Регистрация</button>
+        </div-->
+
+        <h1>Авторизация</h2>
+        <div style="margin-top: 20px">
+            <a>Логин</a><br>
+            <input type="login">
+        </div>
+        <div style="margin-top: 20px">
+            <a>Пароль</a><br>
+            <input type="password">
         </div>
 
-        <h1>Пользователи</h1>
+        <form action="/users" style="margin-top: 20px">
+            <button>Войти в аккаунт</button>
+        </form> 
 
-        <ul>
-        <% @users.each do |user| %>
-            <li>
-            <%= link_to user.login, user %>
-            </li>
-        <% end %>
-        </ul>
+        <form action="/users/new" style="margin-top: 40px">
+            <button>Перейти к регистрации</button>
+        </form>
+
+        <p><a href="/list">Список пользователей</a></p>
 
     </body>
 </html>
