--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
-<p><%= @user.name %></p>
-<p><%= @user.login %></p>
-<p><%= @user.password %></p>
-
+<p>Имя пользователя: <%= @user.name %></p>
+<p>Логин: <%= @user.login %></p>
+<p>Пароль: <%= @user.password %></p>
