--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for(@user) do |form| %>
 
   <div style="margin-top: 20px">
-    <%= form.label :name %><br>
+    <%= form.label "Имя" %><br>
     <%= form.text_field :name%>
     <% @user.errors.full_messages_for(:name).each do |message| %>
       <div><%= message %></div>
@@ -11,7 +11,7 @@
   </div>
 
   <div style="margin-top: 20px">
-    <%= form.label :login %><br>
+    <%= form.label "Логин" %><br>
     <%= form.text_field :login %>
     <% @user.errors.full_messages_for(:login).each do |message| %>
       <div><%= message %></div>
@@ -19,7 +19,7 @@
   </div>
 
   <div style="margin-top: 20px">
-    <label for="user_password">Password</label><br>
+    <label for="user_password">Пароль</label><br>
     <input id="user_password" name="user[password]" type="password" />
     <% @user.errors.full_messages_for(:password).each do |message| %>
       <div><%= message %></div>
@@ -27,7 +27,7 @@
   </div>
 
   <div style="margin-top: 20px">
-    <label for="user_password_confirmation">Confirmation</label><br>
+    <label for="user_password_confirmation">Подтверждение пароля</label><br>
     <input id="user_password_confirmation" name="user[password_confirmation]" type="password" />
     <% @user.errors.full_messages_for(:password_confirmation).each do |message| %>
       <div><%= message %></div>
