--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -49,8 +49,17 @@
                 <input style="margin-bottom:20px" type = 'password' name = 'user[password]'><br>
             </div>
             <input type = 'submit' name = 'submit' value = 'Войти'>
+            
+            <% if flash[:login_errors] %>
+                <div class = 'alert alert-warning card-alert'>
+                    <% flash[:login_errors].each do |error|%>
+                        <p class = 'p md-3 fw-normal'><%= error %></p>
+                    <% end %>
+                </div>
+            <% end %>
         </form>
         
+      
 
         <form action="/users/new" style="margin-top: 40px">
             <button>Перейти к регистрации</button>
