New html styles

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
-<h1>Регистрация</h1>
+<div class="modal2" style="position: fixed; top: 50%; left: 50%">
+
+<a style="font-size:28px">Регистрация</a>
 
 <%= form_for(@user) do |form| %>
 
@@ -44,3 +46,5 @@
 <form action="/users" style="margin-top: 40px">
   <button>Перейти к авторизации</button>
 </form>
+
+</div>
