--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,39 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Oswald|Roboto&display=swap" rel="stylesheet">
+        <style>
+            body {
+            font-family: 'Roboto', sans-serif;
+            font-size: 14px;
+            }
+            
+            .modal1{
+            padding: 5px;
+            background: #fff1;
+            position: fixed; top: 5%; left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            }
+            .modal2{
+            padding: 10px;
+            background: #ccc;
+            position: fixed; top: 40%; left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            }
+            
+        </style>
   </head>
 
-  <body >
-    <header>
-      <div style="margin-top:40px">
+  <body>
+    <header class="modal1">
+      <div  style="margin-top:40px">
         <b>
         <%if User.find_by(id:session[:user_id])%>
-          <a style="margin-left:0px" href="/users">Выход</a>
+          <a style="margin-left:0px;" href="/users">Выход</a>
           <a style="margin-left:20px" href="/users/<%=session[:user_id]%>"> Вы вошли как: <%=User.find_by(id:session[:user_id]).name%><a>
         <%else%>
           <a style="margin-left:0px" href="/users">Вход</a>
