--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,65 +1,35 @@
 <!doctype html>
     <head>
 
-    <style type="text/css">
-        #centerLayer {
-        margin-left: 30%;
-        width: 40%;
-        background: #ffc591;
-        padding: 15px;
-        }
-    </style>
     </head>
     
     <body>
-        <!--h1 style="margin-top: 40px"></h1>
-
-        <div id="centerLayer">
-            <h1 style="margin-left: 31%" id="centerLayer">Авторизация</h1>
-            <div style="margin-left: 20.5%; width: 92%; margin-bottom: 5px; margin-top: 10px">
-                <input type="login" placeholder="Логин" aria-label="Логин">
-                <input type="password" style="margin-top: 1%" placeholder="Пароль" aria-label="Пароль">
-            </div>
-            <button type="submit" style="margin-top: 20px; margin-left: 39%; height:25px; width:20%">Вход</button>
+        <div class="modal2">
+            <form action = '/sessions' method = 'POST'>
+                <a style="font-size:28px">Авторизация</a>
+                
+                <input type = 'hidden' name = 'authenticity_token' value = '<%=form_authenticity_token%>'>
+                <div style="margin-top:20px">
+                    <div>
+                        <a>Логин</a><br>
+                        <input style="margin-bottom:20px" type = 'login' name = 'user[login]'><br>
+                    </div>
+                    <div>
+                        <a>Пароль</a><br>
+                        <input style="margin-bottom:20px" type = 'password' name = 'user[password]'><br>
+                    </div>
+                </div>
+                <input type = 'submit' name = 'submit' value = 'Войти'>
+            </form>
+            
+            <% if flash.alert %>
+                <p><%= flash.alert %></p>
+            <% end %>
+            
+            <form action="/users/new" style="margin-top: 20px">
+                <button>Перейти к регистрации</button>
+            </form>
         </div>
-
-        <h1 style="margin-top: 40px"></h1>
-
-        <div id="centerLayer">
-            <h1 style="margin-left: 31%" id="centerLayer">Регистрация</h1>
-            <div style="margin-left: 20.5%; width: 92%; margin-bottom: 5px; margin-top: 10px">
-                <input type="login" placeholder="Имя" aria-label="Имя">
-                <input type="login" placeholder="Логин" aria-label="Логин">
-            </div>
-            <div style="margin-left: 20.5%; width: 92%; margin-bottom: 5px; margin-top: 10px">
-                <input type="password" style="margin-top: 1%" placeholder="Пароль" aria-label="Пароль">
-                <input type="password" style="margin-top: 1%" placeholder="Подтвердите пароль" aria-label="Подтвердите пароль">
-            </div>
-            <button type="submit" style="margin-top: 20px; margin-left: 39%; height:25px; width:20%">Регистрация</button>
-        </div-->
-
-
-        <form action = '/sessions' method = 'POST'>
-            <h1>Авторизация</h2>
-            <input type = 'hidden' name = 'authenticity_token' value = '<%=form_authenticity_token%>'>
-            <div>
-                <a>Логин</a><br>
-                <input style="margin-bottom:20px" type = 'login' name = 'user[login]'><br>
-                <a>Пароль</a><br>
-                <input style="margin-bottom:20px" type = 'password' name = 'user[password]'><br>
-            </div>
-            <input type = 'submit' name = 'submit' value = 'Войти'>
-        </form>
-
-        
-        <% if flash.alert %>
-            <p><%= flash.alert %></p>
-        <% end %>
-
-
-        <form action="/users/new" style="margin-top: 40px">
-            <button>Перейти к регистрации</button>
-        </form>
 
     </body>
 </html>
