--- a/app/views/users/list.html.erb
+++ b/app/views/users/list.html.erb
@@ -12,15 +12,17 @@
     
     <body>
        
-        <h1>Пользователи: <%= User.count %></h1>
+       <div class="modal2">
+            <a style="font-size:28px">Пользователи: <%= User.count %></a>
 
-        <ul>
-        <% @users.each do |user| %>
-            <li>
-            <%= link_to user.login, user %>
-            </li>
-        <% end %>
-        </ul>
+            <ul>
+            <% @users.each do |user| %>
+                <li>
+                <%= link_to user.name, user %>
+                </li>
+            <% end %>
+            </ul>
 
+        </div>
     </body>
 </html>
