--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,16 @@
-<%if @user%>
-    <p>Имя пользователя: <%= @user.name %></p>
-    <%if @user.id == session[:user_id]%>
-        <p>Это ваш профиль!</p>
-        <p style="margin-top:40px">Логин: <%= @user.login %></p>
-        <p>Пароль: <%= @user.password %></p>
-    <%end%>
-<%else%>
-    <h1>Пользователь не найден</h1>
-<%end%>
+<body>
+
+    <div class="modal2">
+        <%if @user%>
+            <p>Имя пользователя: <%= @user.name %></p>
+            <%if @user.id == session[:user_id]%>
+                <p>Это ваш профиль!</p>
+                <p style="margin-top:40px">Логин: <%= @user.login %></p>
+                <p>Пароль: <%= @user.password %></p>
+            <%end%>
+        <%else%>
+            <h1>Пользователь не найден</h1>
+        <%end%>
+    </div>
+
+</body>
