add user :destroy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
             .modal1{
             padding: 5px;
             background: #fff1;
-            position: fixed; top: 5%; left: 50%;
+            position: fixed;  left: 50%; top: 5%;
             -webkit-transform: translate(-50%, -50%);
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
@@ -26,10 +26,10 @@
             .modal2{
             padding: 10px;
             background: #ccc;
-            position: fixed; top: 40%; left: 50%;
-            -webkit-transform: translate(-50%, -50%);
-            -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+            position: fixed; top: 20%; left: 50%;
+            -webkit-transform: translate(-50%, 0%);
+            -ms-transform: translate(-50%, 0%);
+            transform: translate(-50%, 0%);
             }
             
         </style>
