--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<div class="modal2" style="position: fixed; top: 50%; left: 50%">
+<div class="modal2">
 
 <a style="font-size:28px">Регистрация</a>
 
@@ -43,7 +43,7 @@
 
 <% end %>
 
-<form action="/users" style="margin-top: 40px">
+<form action="/users" style="margin-top: 20px">
   <button>Перейти к авторизации</button>
 </form>
 
