--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,8 @@
                 <p>Это ваш профиль!</p>
                 <p style="margin-top:40px">Логин: <%= @user.login %></p>
                 <p>Пароль: <%= @user.password %></p>
+                
+                <%= link_to "Удалить профиль", user_path(@user), method: :delete, data: { confirm: "Вы уверены?" } %>
             <%end%>
         <%else%>
             <h1>Пользователь не найден</h1>
