added edit and update users, partial _form for registration and updating

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
           <a style="margin-left:20px" >Вы вошли как: Гость</a>
           <!--a style="margin-left:20px" href="/users/999999999">Профиль</a-->
         <%end%>
-        <a style="margin-left:20px" href="/list">Список пользователей<a><b>
+        <a style="margin-left:20px" href="/users/list">Список пользователей<a><b>
       </div>
     </header>
     <%= yield %>
