--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,9 @@
                 <p>Это ваш профиль!</p>
                 <p style="margin-top:40px">Логин: <%= @user.login %></p>
                 <p>Пароль: <%= @user.password %></p>
-                
-                <%= link_to "Удалить профиль", user_path(@user), method: :delete, data: { confirm: "Вы уверены?" } %>
+            
+                <%= link_to "Редактировать профиль", edit_user_path(@user), data: { confirm: "Вы уверены?" }%>
+                <div style="margin-top:10px"><%= link_to "Удалить профиль", user_path(@user), method: :delete, data: { confirm: "Вы уверены?" } %></div>
             <%end%>
         <%else%>
             <h1>Пользователь не найден</h1>
