--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,27 +17,42 @@
             
             .modal1{
             padding: 5px;
-            background: #fff1;
             position: fixed;  left: 50%; top: 5%;
             -webkit-transform: translate(-50%, -50%);
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
             }
+            .header_back{
+            width: 100%;
+            height: 50px;
+            background: linear-gradient(to top, #82DDFF 0%, #B9ECFE 100%);
+            }
             .modal2{
-            padding: 10px;
-            background: #ccc;
+            padding: 5px;
             position: fixed; top: 20%; left: 50%;
             -webkit-transform: translate(-50%, 0%);
             -ms-transform: translate(-50%, 0%);
             transform: translate(-50%, 0%);
             }
+            .circle{
+            position: fixed; top: 63%; left: 50%;
+            -webkit-transform: translate(-50%, 0%);
+            -ms-transform: translate(-50%, 0%);
+            transform: translate(-50%, 0%);
+            width: 160px;
+            height: 160px;
+            border-radius: 50%;
+            margin: 0 auto;
+            background: repeating-radial-gradient(circle, #B9ECFE, #B9ECFE 10px, #82DDFF 10px, #82DDFF 20px);
+            }
             
         </style>
   </head>
 
-  <body>
+  <body >
+    <div class="header_back" ></div>
     <header class="modal1">
-      <div  style="margin-top:40px">
+      <div>
         <b>
         <%if User.find_by(id:session[:user_id])%>
           <a style="margin-left:0px;" href="/users">Выход</a>
@@ -50,6 +65,7 @@
         <a style="margin-left:20px" href="/users/list">Список пользователей<a><b>
       </div>
     </header>
+    <div class="circle" ></div>
     <%= yield %>
   </body>
 </html>
