--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,93 @@
  *= require_tree .
  *= require_self
  */
+
+
+ body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    }
+    
+
+    
+.header_style{
+    padding: 5px;
+    position: fixed;  left: 50%; top: 5%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    }
+.header_back{
+    width: 100%;
+    height: 50px;
+    background: linear-gradient(to top, #82DDFF 0%, #B9ECFE 100%);
+      display: inline-block;
+      box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), 1px 1px 5px rgba(255, 255, 255, 1);
+    }
+
+
+
+.modal2{   
+    padding: 20px;
+    position: fixed; top: 15%; left: 50%;
+    -webkit-transform: translate(-50%, 0%);
+    -ms-transform: translate(-50%, 0%);
+    transform: translate(-50%, 0%);
+      background: #B9ECFE;
+      display: inline-block;
+      box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), 1px 1px 5px rgba(255, 255, 255, 1);
+    }
+
+
+
+.circle{
+    position: fixed; top: 15%; left: 90%;
+    -webkit-transform: translate(-50%, 0%);
+    -ms-transform: translate(-50%, 0%);
+    transform: translate(-50%, 0%);
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    margin: 0 auto;
+    background: repeating-radial-gradient(circle, #B9ECFE, #B9ECFE 10px, #82DDFF 10px, #82DDFF 20px);
+    }
+
+
+
+.rotate-shadows {
+    position: fixed; top: 15%; left: 90%;
+    -webkit-transform: translate(-50%, 0%);
+    -ms-transform: translate(-50%, 0%);
+    transform: translate(-50%, 0%);
+    width: 165px;
+    height: 165px;
+    }
+.rotate-shadows:after,
+.rotate-shadows:before {
+      content: "";
+      border-radius: 50%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transform-origin: center center;
+    }
+.rotate-shadows:before {
+      box-shadow: inset 0 20px 0 rgba(0, 250, 250, 0.6), inset 20px 0 0 rgba(0, 200, 200, 0.6), inset 0 -20px 0 rgba(0, 150, 200, 0.6), inset -20px 0 0 rgba(0, 200, 250, 0.6);
+      animation: rotate-before 2s -0.5s linear infinite;
+    }
+.rotate-shadows:after {
+      box-shadow: inset 0 20px 0 rgba(250, 250, 0, 0.6), inset 20px 0 0 rgba(250, 200, 0, 0.6), inset 0 -20px 0 rgba(250, 150, 0, 0.6), inset -20px 0 0 rgba(250, 100, 0, 0.6);
+      animation: rotate-after 2s -0.5s linear infinite;
+    }
+@keyframes rotate-after {
+      0% {transform: rotateZ(0deg) scaleX(1) scaleY(1);}
+      50% {transform: rotateZ(180deg) scaleX(0.82) scaleY(0.95);}
+      100% {transform: rotateZ(360deg) scaleX(1) scaleY(1);}
+    }
+@keyframes rotate-before {
+      0% {transform: rotateZ(0deg) scaleX(1) scaleY(1);}
+      50% {transform: rotateZ(-180deg) scaleX(0.95) scaleY(0.85);}
+      100% {transform: rotateZ(-360deg) scaleX(1) scaleY(1);}
+    }
