--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title><%= t("pages.not_found_page")%></title>
+        <link rel="stylesheet" href="../assets/stylesheets/application.css">
     </head>
     <body>
-        <div>
-            <h1><%= t("errors.page_not_exists")%></h1>
+        <div class="modal2">
+            <h1><%= t("errors.Такой страницы не существует!")%></h1>
         </div>
     </body>
 </html>
