--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,49 +9,12 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Oswald|Roboto&display=swap" rel="stylesheet">
-        <style>
-            body {
-            font-family: 'Roboto', sans-serif;
-            font-size: 14px;
-            }
-            
-            .modal1{
-            padding: 5px;
-            position: fixed;  left: 50%; top: 5%;
-            -webkit-transform: translate(-50%, -50%);
-            -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-            }
-            .header_back{
-            width: 100%;
-            height: 50px;
-            background: linear-gradient(to top, #82DDFF 0%, #B9ECFE 100%);
-            }
-            .modal2{
-            padding: 5px;
-            position: fixed; top: 20%; left: 50%;
-            -webkit-transform: translate(-50%, 0%);
-            -ms-transform: translate(-50%, 0%);
-            transform: translate(-50%, 0%);
-            }
-            .circle{
-            position: fixed; top: 63%; left: 50%;
-            -webkit-transform: translate(-50%, 0%);
-            -ms-transform: translate(-50%, 0%);
-            transform: translate(-50%, 0%);
-            width: 160px;
-            height: 160px;
-            border-radius: 50%;
-            margin: 0 auto;
-            background: repeating-radial-gradient(circle, #B9ECFE, #B9ECFE 10px, #82DDFF 10px, #82DDFF 20px);
-            }
-            
-        </style>
+    <link rel="stylesheet" href="../assets/stylesheets/application.css">
   </head>
 
   <body >
     <div class="header_back" ></div>
-    <header class="modal1">
+    <header class="header_style">
       <div>
         <b>
         <%if User.find_by(id:session[:user_id])%>
@@ -66,6 +29,7 @@
       </div>
     </header>
     <div class="circle" ></div>
+    <div class="rotate-shadows"></div>
     <%= yield %>
   </body>
 </html>
