new color of  background and shadows

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <body>
 
-    <div class="modal2">
+    <div class="base_form">
         <%if @user%>
             <p>Имя пользователя: <%= @user.name %></p>
             <%if @user.id == session[:user_id]%>
