--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@
  body {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
+    font-weight: bold;
     }
     
 
@@ -32,22 +33,23 @@
 .header_back{
     width: 100%;
     height: 50px;
-    background: linear-gradient(to top, #82DDFF 0%, #B9ECFE 100%);
+    background: linear-gradient(to top, #eaf9ff 0%, #f2fbff 100%);
       display: inline-block;
-      box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), 1px 1px 5px rgba(255, 255, 255, 1);
+      box-shadow: inset 0px 0px 10px rgba(154, 147, 140, 0.5);
     }
 
 
 
-.modal2{   
+.base_form{   
     padding: 20px;
     position: fixed; top: 15%; left: 50%;
     -webkit-transform: translate(-50%, 0%);
     -ms-transform: translate(-50%, 0%);
     transform: translate(-50%, 0%);
-      background: #B9ECFE;
-      display: inline-block;
-      box-shadow: inset 2px 2px 5px rgba(154, 147, 140, 0.5), 1px 1px 5px rgba(255, 255, 255, 1);
+    background: #f2fbff;
+    display: inline-block;
+    box-shadow: inset 0px 0px 10px rgba(154, 147, 140, 0.5);
+    
     }
 
 
@@ -71,8 +73,8 @@
     -webkit-transform: translate(-50%, 0%);
     -ms-transform: translate(-50%, 0%);
     transform: translate(-50%, 0%);
-    width: 165px;
-    height: 165px;
+    width: 600px;
+    height: 700px;
     }
 .rotate-shadows:after,
 .rotate-shadows:before {
@@ -86,12 +88,20 @@
       transform-origin: center center;
     }
 .rotate-shadows:before {
-      box-shadow: inset 0 20px 0 rgba(0, 250, 250, 0.6), inset 20px 0 0 rgba(0, 200, 200, 0.6), inset 0 -20px 0 rgba(0, 150, 200, 0.6), inset -20px 0 0 rgba(0, 200, 250, 0.6);
-      animation: rotate-before 2s -0.5s linear infinite;
+      box-shadow: 
+      inset 0 20px 0 rgba(0, 250, 250, 0.6), 
+      inset 20px 0 0 rgba(0, 200, 200, 0.6), 
+      inset 0 -20px 0 rgba(0, 150, 200, 0.6), 
+      inset -20px 0 0 rgba(0, 200, 250, 0.6);
+      animation: rotate-before 3.5s -0.5s linear infinite;
     }
 .rotate-shadows:after {
-      box-shadow: inset 0 20px 0 rgba(250, 250, 0, 0.6), inset 20px 0 0 rgba(250, 200, 0, 0.6), inset 0 -20px 0 rgba(250, 150, 0, 0.6), inset -20px 0 0 rgba(250, 100, 0, 0.6);
-      animation: rotate-after 2s -0.5s linear infinite;
+      box-shadow: 
+      inset 0 20px 0 rgba(250, 250, 0, 0.6), 
+      inset 20px 0 0 rgba(250, 200, 0, 0.6), 
+      inset 0 -20px 0 rgba(250, 150, 0, 0.6), 
+      inset -20px 0 0 rgba(250, 100, 0, 0.6);
+      animation: rotate-after 4.5s -0.5s linear infinite;
     }
 @keyframes rotate-after {
       0% {transform: rotateZ(0deg) scaleX(1) scaleY(1);}
@@ -103,3 +113,19 @@
       50% {transform: rotateZ(-180deg) scaleX(0.95) scaleY(0.85);}
       100% {transform: rotateZ(-360deg) scaleX(1) scaleY(1);}
     }
+
+    
+.span-shadow {text-align:center}
+.span-shadow span {
+  display: inline-block;
+  margin: 15px;
+  padding: 20px 30px;
+  cursor: pointer;
+  border-radius: 10px;
+  color: white;
+  transition: .2s linear;
+}
+.span-shadow span:nth-child(1) {background:#D2973D}
+.span-shadow span:nth-child(1):hover {
+  box-shadow: 0 0 0 2px #D2973D inset, 0 0 0 4px white inset;
+}
