--- a/app/views/users/list.html.erb
+++ b/app/views/users/list.html.erb
@@ -1,18 +1,10 @@
 <html>
     <head>
-        <style type="text/css">
-            #centerLayer {
-            margin-left: 30%;
-            width: 40%;
-            background: #ffc591;
-            padding: 15px;
-            }
-        </style>
     </head>
     
     <body>
        
-       <div class="modal2">
+       <div class="base_form">
             <a style="font-size:28px">Пользователи: <%= User.count %></a>
 
             <ul>
