--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,32 +24,39 @@
 
     
 .header_style{
+    z-index: 1001;
     padding: 5px;
-    position: fixed;  left: 50%; top: 5%;
+    position: fixed;  left: 50%; top: 50%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     }
+    
 .header_back{
+    z-index: 1000;
+    position: fixed;  left: 50%; top: 5%;
     width: 100%;
     height: 50px;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     background: linear-gradient(to top, #eaf9ff 0%, #f2fbff 100%);
-      display: inline-block;
-      box-shadow: inset 0px 0px 10px rgba(154, 147, 140, 0.5);
+    display: inline-block;
+    box-shadow: inset 0px 0px 10px rgba(154, 147, 140, 0.5);
     }
 
 
 
 .base_form{   
     padding: 20px;
-    position: fixed; top: 15%; left: 50%;
+    margin-top: 5%;
+    margin-left: 50%;
     -webkit-transform: translate(-50%, 0%);
     -ms-transform: translate(-50%, 0%);
     transform: translate(-50%, 0%);
     background: #f2fbff;
     display: inline-block;
     box-shadow: inset 0px 0px 10px rgba(154, 147, 140, 0.5);
-    
     }
 
 
