bug fixes, posts routes and controller update

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,6 +18,8 @@
         <% @user.posts.each do |post| %>
 
         <p>
+            <%= post.updated_at %>
+            <%= type(post.updated_at) %>
             <%= post.body %>
         </p>
         <% end %>
