--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,8 +21,20 @@
     font-weight: bold;
     }
     
+.small_text {
+    font-size: 10px;
+    color: rgb(100, 100, 100);
+}
 
-    
+.text_box {
+    background: #fbfeff;
+    box-shadow: inset 0px 0px 4px rgba(200, 200, 200, 0.8);
+    margin:20px auto;
+    padding:10px;
+    width:170px;
+    word-wrap: break-word;
+    font-weight: 500;
+}
 .header_style{
     z-index: 1001;
     padding: 5px;
@@ -34,12 +46,12 @@
     
 .header_back{
     z-index: 1000;
-    position: fixed;  left: 50%; top: 5%;
+    position: fixed;  left: 0%; top: 0%;
     width: 100%;
     height: 50px;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(0%, 0%);
+    -ms-transform: translate(0%, 0%);
+    transform: translate(0%, 0%);
     background: linear-gradient(to top, #eaf9ff 0%, #f2fbff 100%);
     display: inline-block;
     box-shadow: inset 0px 0px 10px rgba(154, 147, 140, 0.5);
@@ -108,7 +120,7 @@
       inset 20px 0 0 rgba(250, 200, 0, 0.6), 
       inset 0 -20px 0 rgba(250, 150, 0, 0.6), 
       inset -20px 0 0 rgba(250, 100, 0, 0.6);
-      animation: rotate-after 4.5s -0.5s linear infinite;
+      animation: rotate-after 5.5s -0.5s linear infinite;
     }
 @keyframes rotate-after {
       0% {transform: rotateZ(0deg) scaleX(1) scaleY(1);}
