fix design: margins, sizes, styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,11 @@
     </header>
     
 
-    <div class="rotate-shadows" style="position: fixed; top: 15%; left: 8%;"></div>
-    <div class="rotate-shadows" style="position: fixed; top: 15%; left: 92%;"></div>
+    <div class="rotate-shadows" style="position: fixed; top: 15%; left: 0%;"></div>
+    <div class="rotate-shadows" style="position: fixed; top: 15%; left: 100%;"></div>
+
+    <div class="rotate-shadows" style="width: 300px; height: 400px; position: fixed; top: 40%; left: 0%;"></div>
+    <div class="rotate-shadows" style="width: 300px; height: 400px; position: fixed; top: 40%; left: 100%;"></div>
 
 
     <%= yield %>
