--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,10 +31,14 @@
     box-shadow: inset 0px 0px 4px rgba(200, 200, 200, 0.8);
     margin:20px auto;
     padding:10px;
-    width:170px;
+    width:520px;
     word-wrap: break-word;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
     font-weight: 500;
+    resize:none;
 }
+
 .header_style{
     z-index: 1001;
     padding: 5px;
@@ -42,7 +46,7 @@
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    }
+}
     
 .header_back{
     z-index: 1000;
@@ -63,6 +67,7 @@
     padding: 20px;
     margin-top: 5%;
     margin-left: 50%;
+    width: 540px;
     -webkit-transform: translate(-50%, 0%);
     -ms-transform: translate(-50%, 0%);
     transform: translate(-50%, 0%);
@@ -97,54 +102,50 @@
     }
 .rotate-shadows:after,
 .rotate-shadows:before {
-      content: "";
-      border-radius: 50%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      transform-origin: center center;
+    content: "";
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: center center;
     }
 .rotate-shadows:before {
-      box-shadow: 
-      inset 0 20px 0 rgba(0, 250, 250, 0.6), 
-      inset 20px 0 0 rgba(0, 200, 200, 0.6), 
-      inset 0 -20px 0 rgba(0, 150, 200, 0.6), 
-      inset -20px 0 0 rgba(0, 200, 250, 0.6);
-      animation: rotate-before 3.5s -0.5s linear infinite;
+    box-shadow: 
+    inset 0 20px 0 rgba(0, 250, 250, 0.6), 
+    inset 20px 0 0 rgba(0, 200, 200, 0.6), 
+    inset 0 -20px 0 rgba(0, 150, 200, 0.6), 
+    inset -20px 0 0 rgba(0, 200, 250, 0.6);
+    animation: rotate-before 3.5s -0.5s linear infinite;
     }
 .rotate-shadows:after {
-      box-shadow: 
-      inset 0 20px 0 rgba(250, 250, 0, 0.6), 
-      inset 20px 0 0 rgba(250, 200, 0, 0.6), 
-      inset 0 -20px 0 rgba(250, 150, 0, 0.6), 
-      inset -20px 0 0 rgba(250, 100, 0, 0.6);
-      animation: rotate-after 5.5s -0.5s linear infinite;
+    box-shadow: 
+    inset 0 20px 0 rgba(250, 250, 0, 0.6), 
+    inset 20px 0 0 rgba(250, 200, 0, 0.6), 
+    inset 0 -20px 0 rgba(250, 150, 0, 0.6), 
+    inset -20px 0 0 rgba(250, 100, 0, 0.6);
+    animation: rotate-after 5.5s -0.5s linear infinite;
     }
 @keyframes rotate-after {
-      0% {transform: rotateZ(0deg) scaleX(1) scaleY(1);}
-      50% {transform: rotateZ(180deg) scaleX(0.82) scaleY(0.95);}
-      100% {transform: rotateZ(360deg) scaleX(1) scaleY(1);}
+    0% {transform: rotateZ(0deg) scaleX(1) scaleY(1);}
+    50% {transform: rotateZ(180deg) scaleX(0.82) scaleY(0.95);}
+    100% {transform: rotateZ(360deg) scaleX(1) scaleY(1);}
     }
 @keyframes rotate-before {
-      0% {transform: rotateZ(0deg) scaleX(1) scaleY(1);}
-      50% {transform: rotateZ(-180deg) scaleX(0.95) scaleY(0.85);}
-      100% {transform: rotateZ(-360deg) scaleX(1) scaleY(1);}
+    0% {transform: rotateZ(0deg) scaleX(1) scaleY(1);}
+    50% {transform: rotateZ(-180deg) scaleX(0.95) scaleY(0.85);}
+    100% {transform: rotateZ(-360deg) scaleX(1) scaleY(1);}
     }
 
     
 .span-shadow {text-align:center}
 .span-shadow span {
-  display: inline-block;
-  margin: 15px;
-  padding: 20px 30px;
-  cursor: pointer;
-  border-radius: 10px;
-  color: white;
-  transition: .2s linear;
-}
-.span-shadow span:nth-child(1) {background:#D2973D}
-.span-shadow span:nth-child(1):hover {
-  box-shadow: 0 0 0 2px #D2973D inset, 0 0 0 4px white inset;
+    display: inline-block;
+    margin: 15px;
+    padding: 20px 30px;
+    cursor: pointer;
+    border-radius: 10px;
+    color: white;
+    transition: .2s linear;
 }
