--- a/app/views/errors/error_404.html.erb
+++ b/app/views/errors/error_404.html.erb
@@ -4,8 +4,10 @@
         <title><%= t("pages.not_found_page")%></title>
     </head>
     <body>
-        <div>
-                <h1><%= t("errors.page_not_exists")%></h1>
+        <div class="base_form">
+            <h1><%= t("errors.page_not_exists")%></h1>
+            <h1><%= t("errors.page_not_exists")%></h1>
+            <h1><%= t("errors.page_not_exists")%></h1>
         </div>
     </body>
 </html>
