--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -5,8 +5,6 @@
         <link rel="stylesheet" href="../assets/stylesheets/application.css">
     </head>
     <body>
-        <div class="modal2">
-            <h1><%= t("errors.Такой страницы не существует!")%></h1>
-        </div>
+        <h1 class="base_form"><%= t("errors.Такой страницы не существует!")%></h1>
     </body>
 </html>
