--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,13 @@
 <div class="base_form">
 
-<a style="font-size:28px">Регистрация</a>
+  <div>
+    <a style="font-size:28px">Регистрация</a>
 
-<%= render "form", user: @user %>
+    <%= render "form", user: @user %>
 
-<form action="/users" style="margin-top: 20px">
-  <button>Перейти к авторизации</button>
-</form>
+    <form action="/users" style="margin-top: 20px">
+      <button>Перейти к авторизации</button>
+    </form>
+  </div>
 
 </div>
