--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
 
     <%= render "form", user: @user %>
 
-    <form action="/users" style="margin-top: 20px">
+    <form action="/users/login" style="margin-top: 20px">
       <button>Перейти к авторизации</button>
     </form>
   </div>
