--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,7 +33,7 @@
 
 .text_box {
     background: #fbfeff;
-    box-shadow: inset 0px 0px 4px rgba(200, 200, 200, 0.8);
+    box-shadow: inset 0px 0px 6px rgba(180, 180, 180, 0.8);
     margin:20px auto;
     padding:15px;
     width:520px;
@@ -47,6 +47,7 @@
 .header_style{
     z-index: 1001;
     padding: 5px;
+    width: 80%;
     position: fixed;  left: 50%; top: 50%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
@@ -63,11 +64,11 @@
     transform: translate(0%, 0%);
     background: linear-gradient(to top, #eaf9ff 0%, #f2fbff 100%);
     display: inline-block;
-    box-shadow: inset 0px 0px 10px rgba(154, 147, 140, 0.5);
+    box-shadow: inset 0px 0px 6px rgba(180, 180, 180, 0.8);
     }
 
 .base_form{   
-    padding: 18px;
+    padding: 24px;
     margin-top: 5%;
     margin-left: 50%;
     width: 550px;
@@ -76,7 +77,7 @@
     transform: translate(-50%, 0%);
     background: #f2fbff;
     display: inline-block;
-    box-shadow: inset 0px 0px 10px rgba(154, 147, 140, 0.5);
+    box-shadow: inset 0px 0px 6px rgba(180, 180, 180, 0.8);
     }
 
 
