--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,35 +1,15 @@
-<!doctype html>
-    <head>
-
-    </head>
+<body>
     
-    <body>
-        <div class="base_form">
-            <form action = '/sessions' method = 'POST'>
-                <a style="font-size:28px">Авторизация</a>
-                
-                <input type = 'hidden' name = 'authenticity_token' value = '<%=form_authenticity_token%>'>
-                <div style="margin-top:20px">
-                    <div>
-                        <a>Логин</a><br>
-                        <input style="margin-bottom:20px" type = 'login' name = 'user[login]'><br>
-                    </div>
-                    <div>
-                        <a>Пароль</a><br>
-                        <input style="margin-bottom:20px" type = 'password' name = 'user[password]'><br>
-                    </div>
-                </div>
-                <input type = 'submit' name = 'submit' value = 'Войти'>
-            </form>
-            
-            <% if flash.alert %>
-                <p><%= flash.alert %></p>
-            <% end %>
-            
-            <form action="/users/new" style="margin-top: 20px">
-                <button>Перейти к регистрации</button>
-            </form>
-        </div>
+    <div class="base_form">
+        <a style="font-size:28px">Пользователи: <%= Post.count %></a>
 
-    </body>
-</html>
+        <ul>
+        <% @posts.each do |post| %>
+            <li>
+                <a class="large_text" style="color: rgb(0, 0, 50);" href="/users/<%= post.user_id %>"><%= post.title %></a>
+            </li>
+        <% end %>
+        </ul>
+
+    </div>
+</body>
