--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,5 +2,5 @@
     <% if session[:user_id] == @post.user_id %>
         <a>Это ваша статья!</a>
     <% end %>
-    <%= render "users/form_post", post: @post %>
+    <%= render "form_post", post: @post %>
 </div>
