--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,11 +15,11 @@
  */
 
 
- body {
+body {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: bold;
-    }
+}
     
 .small_text {
     font-size: 10px;
@@ -29,6 +29,7 @@
 .large_text {
     font-size: 24px;
     color: rgb(0, 0, 0);
+    text-decoration: none;
 }
 
 .text_box {
@@ -36,7 +37,7 @@
     box-shadow: inset 0px 0px 6px rgba(180, 180, 180, 0.8);
     margin:20px auto;
     padding:15px;
-    width:520px;
+    width:94%;
     word-wrap: break-word;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
@@ -54,11 +55,11 @@
     transform: translate(-50%, -50%);
 }
     
-.header_back{
+.header_form{
     z-index: 1000;
     position: fixed;  left: 0%; top: 0%;
     width: 100%;
-    height: 50px;
+    height: 8%;
     -webkit-transform: translate(0%, 0%);
     -ms-transform: translate(0%, 0%);
     transform: translate(0%, 0%);
@@ -71,14 +72,14 @@
     padding: 24px;
     margin-top: 5%;
     margin-left: 50%;
-    width: 550px;
+    width: 36%;
     -webkit-transform: translate(-50%, 0%);
     -ms-transform: translate(-50%, 0%);
     transform: translate(-50%, 0%);
     background: #f2fbff;
     display: inline-block;
     box-shadow: inset 0px 0px 6px rgba(180, 180, 180, 0.8);
-    }
+}
 
 .circle{
     position: fixed; top: 15%; left: 90%;
@@ -90,7 +91,7 @@
     border-radius: 50%;
     margin: 0 auto;
     background: repeating-radial-gradient(circle, #B9ECFE, #B9ECFE 10px, #82DDFF 10px, #82DDFF 20px);
-    }
+}
 
 .rotate-shadows {
     position: fixed; top: 15%; left: 90%;
@@ -99,7 +100,7 @@
     transform: translate(-50%, 0%);
     width: 600px;
     height: 700px;
-    }
+}
 .rotate-shadows:after,
 .rotate-shadows:before {
     content: "";
@@ -110,7 +111,7 @@
     width: 100%;
     height: 100%;
     transform-origin: center center;
-    }
+}
 .rotate-shadows:before {
     box-shadow: 
     inset 0 20px 0 rgba(0, 250, 250, 0.6), 
@@ -118,7 +119,7 @@
     inset 0 -20px 0 rgba(0, 150, 200, 0.6), 
     inset -20px 0 0 rgba(0, 200, 250, 0.6);
     animation: rotate-before 3.5s -0.5s linear infinite;
-    }
+}
 .rotate-shadows:after {
     box-shadow: 
     inset 0 20px 0 rgba(250, 250, 0, 0.6), 
@@ -126,14 +127,14 @@
     inset 0 -20px 0 rgba(250, 150, 0, 0.6), 
     inset -20px 0 0 rgba(250, 100, 0, 0.6);
     animation: rotate-after 5.5s -0.5s linear infinite;
-    }
+}
 @keyframes rotate-after {
     0% {transform: rotateZ(0deg) scaleX(1) scaleY(1);}
     50% {transform: rotateZ(180deg) scaleX(0.82) scaleY(0.95);}
     100% {transform: rotateZ(360deg) scaleX(1) scaleY(1);}
-    }
+}
 @keyframes rotate-before {
     0% {transform: rotateZ(0deg) scaleX(1) scaleY(1);}
     50% {transform: rotateZ(-180deg) scaleX(0.95) scaleY(0.85);}
     100% {transform: rotateZ(-360deg) scaleX(1) scaleY(1);}
-    }
+}
