--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -33,7 +33,7 @@
   </div>
 
   <div style="margin-top: 20px">
-    <%= form.submit "Утвердить"%>
+    <%= form.submit "Утвердить!"%>
   </div>
 
 <% end %>
