--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <body>
     
     <div class="base_form">
-        <a style="font-size:28px">Новостные посты: <%= Post.count %></a>
+        <a style="font-size:28px">Всего новостных постов: <%= Post.count %></a>
 
         <ul>
         <% @posts.each do |post| %>
@@ -10,6 +10,6 @@
             </li>
         <% end %>
         </ul>
-        <%= paginate @posts %>
+        <div class = "center"> <%= paginate @posts %> </div>
     </div>
 </body>
