--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,9 @@
 <div class="base_form">
     <% if session[:user_id] == @post.user_id %>
-        <a>Это ваша статья!</a>
+        <p>Это ваша статья!</p>
+        <br>
+            <%= link_to "Редактировать профиль", edit_user_post_path(@post), data: { confirm: "Вы уверены?" }%>
+        <div style="margin-top:10px"><%= link_to "Удалить Статью", post_path(@post), method: :delete, data: { confirm: "Вы уверены?" } %></div>
     <% end %>
     <%= render "form_post", post: @post %>
 </div>
