--- a/app/views/users/list.html.erb
+++ b/app/views/users/list.html.erb
@@ -1,7 +1,7 @@
 <body>
     
     <div class="base_form">
-        <a style="font-size:28px">Пользователи: <%= User.count %></a>
+        <a style="font-size:28px">Всего пользователей: <%= User.count %></a>
 
         <ul>
         <% @users.each do |user| %>
@@ -10,6 +10,7 @@
             </li>
         <% end %>
         </ul>
+        <div class = "center"> <%= paginate @users %> </div>
 
     </div>
 </body>
