--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,5 @@
 <div class="base_form">
-
-  <div>
+  <div class="center">
     <a style="font-size:28px">Регистрация</a>
 
     <%= render "form", user: @user %>
@@ -9,5 +8,4 @@
       <button>Перейти к авторизации</button>
     </form>
   </div>
-
 </div>
