--- a/app/views/posts/_form_post.html.erb
+++ b/app/views/posts/_form_post.html.erb
@@ -1,6 +1,9 @@
-<div class="text_box">
-    <a class="small_text"><%= post.updated_at %><a>
-    <a class="small_text" style="margin-left:5px; font-size: 14px;" href="/users/<%= post.user_id %>"><%= User.find_by(id:post.user_id).name %><a><br><br>
-    <a class="large_text" style="margin-top:10px; margin-bottom:10px;" href="/posts/<%= post.id %>"><%= post.title %><a><br><br>
-    <%= sanitize post.body %>
-</div>
+<%= form_for post do |form| %>
+  <p style="margin-bottom:5px">Заголовок</p>
+  <textarea name="post[title]" class="text_box", style="margin-top:0px; height:20px"></textarea>
+
+  <p style="margin-bottom:5px; margin-top:0px">Текст</p>
+  <textarea name="post[body]" class="text_box", style="margin-top:0px; height:152px"></textarea>
+
+  <%= form.submit value="Утвердить!" %>
+<% end %>
