--- a/app/views/posts/_form_post_create.html.erb
+++ b/app/views/posts/_form_post_create.html.erb
@@ -1,4 +1,5 @@
-<%= form_with model: [ user, user.posts.build ] do |form| %>
+<form accept-charset="UTF-8" action="/users/<%=session[:user_id]%>/posts" method="post">
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 
     <p style="margin-bottom:5px">Заголовок</p>
     <textarea name="post[title]" class="text_box", style="margin-top:0px; height:20px"></textarea>
@@ -6,5 +7,5 @@
     <p style="margin-bottom:5px; margin-top:0px">Текст</p>
     <textarea name="post[body]" class="text_box", style="margin-top:0px; height:152px"></textarea>
 
-    <%= form.submit "Утвердить!"%>
-<% end %>
+    <input type="submit" value="Утвердить!">
+</form>
