increase and decrease roles by admin

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
         <%else%>
           <a style="position: fixed; left: 56%; top:50%; transform: translate(0%, -50%);" >Вы вошли как: Гость</a>
         <%end%>
+        <a style="position: fixed; left: 22%; top:50%;  transform: translate(-50%, -50%);" href="/users/clear">Выход</a>
         <a style="position: fixed; left: 31%; top:50%;  transform: translate(-50%, -50%);" href="/">Главная страница</a>
         <a style="position: fixed; left: 39%; top:50%; transform: translate(-50%, -50%);" href="/users/login">Вход</a>
         <a style="position: fixed; left: 48%; top:50%; transform: translate(-50%, -50%);" href="/users/list">Список пользователей<a>
