checkbox for role changes by admin

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,31 +10,34 @@
             <%= link_to "Редактировать профиль", edit_user_path(@user), data: { confirm: "Вы уверены?" }%>
             <div style="margin-top:10px"><%= link_to "Удалить профиль", user_path(@user), method: :delete, data: { confirm: "Вы уверены?" } %></div>
         <%end%>
-        <% if User.find_by(id:session[:user_id]).role == "admin" %>
-            <br>
-            <% if @user.role != "admin" %>
+        <% if User.find_by(id:session[:user_id]) %>
+            <% if User.find_by(id:session[:user_id]).role == "admin" %>
                 <br>
-                <%= link_to "Повысить роль", increase_user_path(@user), data: { confirm: "Вы уверены?" }%>
+                <form accept-charset="UTF-8" action="/users/<%=@user.id%>/change_role" method="post">
+                    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+
+                    <select name="user[role]" id="user_role">
+                        <option value="reader">Читатель</option>
+                        <option value="redactor">Редактор</option>
+                        <option value="admin">Админ</option>
+                    </select>
+
+                    <input type="submit" value="Утвердить!">
+                </form>
             <% end %>
-            <% if @user.role != "reader" %>
-                <br>
-                <%= link_to "Понизить роль", decrease_user_path(@user), data: { confirm: "Вы уверены?" }%>
-            <% end %>
-            <%= flash.alert%>
         <% end %>
     </div>
 
-    <%if ["redactor", "admin"].include? @user.role %>
+    <%if @user.id == session[:user_id] and ["admin", "redactor"].include? @user.role %>
         <div class="base_form" style="margin-top: 2%">
             <h2>Создать новый пост:</h2>
             <%= render "posts/form_post_create", user: @user %>
         </div>
     <% end %>
 
-    <% if @user.posts.length %>
-        <div class="base_form" style="margin-top: 2%">
-        <%if @user.role == "reader" %>
-        <h2>Вы не можете писать статьи!</h2>
+    <div class="base_form" style="margin-top: 2%">
+        <%if @user.role == "reader" and @user.posts.length == 0%>
+            <h2>Вы не можете писать статьи!</h2>
         <%else%>
             <h2>Опубликованные статьи:</h2>
             <% @posts.each do |post| %>
@@ -42,8 +45,7 @@
             <% end %>
             <div class = "center"> <%= paginate @posts %> </div>
         <%end%>
-        </div>
-    <% end %>
+    </div>
 <%else%>
     <h1 class="base_form">Пользователь не найден</h1>
 <%end%>
